@@ -3,7 +3,7 @@
 //  Cog
 //
 //  Created by Vincent Spader on 3/20/05.
-//  Copyright 2005 __MyCompanyName__. All rights reserved.
+//  Copyright 2005 Vincent Spader All rights reserved.
 //
 
 #import <Cocoa/Cocoa.h>
