@@ -3,7 +3,7 @@
 //  zyVorbis
 //
 //  Created by Vincent Spader on 1/25/05.
-//  Copyright 2005 __MyCompanyName__. All rights reserved.
+//  Copyright 2005 Vincent Spader All rights reserved.
 //
 
 #import "FlacFile.h"
