@@ -2,11 +2,12 @@
 ----
 Dragging to the dock icon now works in 10.3.
 Selection now selects the first song added when adding new files.
-Now seeds the random number for shuffle mode.
+Now seeds the random number generator for shuffle mode.
 Redesigned UI thanks to Julian Mayer <julianmayer (at) mac.com>.
-If nothing is selected when the user presses play, the first song is played.
+If nothing is selected when the user presses play, the first song is selected and played.
 Double-clicking when out of focus now behaves as expected.
 Now has a simple dock menu courtesy of Nathanael Weldon <nathanael (at) mailblocks.com>.
+The playlist index now starts at 1.
 
 0.04
 ----
